--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -21,7 +21,7 @@
     <th>
         <p align="right">
 
-        <form action="#" th:action="@{postindex}" th:method="addCustomer" >
+        <form  th:action="@{post}" th:method="userPost" >
 
 
             <button type="submit" class="btn btn-outline-info">
