--- a/src/main/resources/templates/add-transaction-user.html
+++ b/src/main/resources/templates/add-transaction-user.html
@@ -20,9 +20,9 @@
                 <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-5">
-                            <h2 class="text-uppercase text-center mb-5">Add New Transaction Record</h2>
+                            <h2 class="text-uppercase text-center mb-5">Add New Transaction</h2>
 
-                            <form action="http://localhost:8080/transactions/admin/transaction" method="POST">
+                            <form action="http://localhost:8080/user/post/transaction" method="POST">
 
                                 <div class="form-outline mb-4">
                                     <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="amount"/>
@@ -33,12 +33,6 @@
                                     <input   type="text" id="form3Example3cg" class="form-control form-control-lg" name="description"/>
                                     <label class="form-label" for="form3Example3cg">Description</label>
                                 </div>
-
-
-
-
-
-
 
 
                                 <div class="d-flex justify-content-center">
@@ -53,8 +47,6 @@
 
                                 <label class="form-label" for="form3Example4cdg">
                                 </label>
-
-
 
                             </form>
 
