--- a/src/main/resources/templates/admin_home.html
+++ b/src/main/resources/templates/admin_home.html
@@ -27,7 +27,7 @@
                 User ekle
             </button>
     </form>
-        <a href="http://localhost:8080/admin/user/get" class="btn btn-outline-info" role="button">Ana Sayfa</a>
+        <a href="http://localhost:8080/admin/user/get" class="btn btn-outline-info" role="button">User Listesi</a>
 
         <form action="#" th:action="@{post}" th:method="transactionPost" >
 
@@ -45,7 +45,8 @@
         <thead>
 
         <tr>
-            <th>User</th>
+            <th>ID</th>
+            <th>User ID</th>
             <th>Amount</th>
             <th>Description</th>
             <th>Date</th>
@@ -55,6 +56,7 @@
         <tbody>
         <tr th:each="transactions: ${transactions}">
             <td th:text="${transactions.id}" />
+            <td th:text="${transactions.user.id}" />
             <td th:text="${transactions.amount}" />
             <td th:text="${transactions.description}" />
             <td th:text="${transactions.date}" />
