--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<html>
 
 <head>
     <title>Add User</title>
@@ -20,30 +20,39 @@
                 <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-5">
-                            <h2 class="text-uppercase text-center mb-5">Add New Transaction Record</h2>
+                            <h2 class="text-uppercase text-center mb-5">Update New User Record</h2>
 
-                            <form action="http://localhost:8080/transactions/admin/transaction" method="POST">
+                            <form th:action="@{'/admin/update/'+${id}}" method="POST">
 
                                 <div class="form-outline mb-4">
-                                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="amount"/>
-                                    <label class="form-label" for="form3Example1cg">Amount</label>
+                                    <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="username"/>
+                                    <label class="form-label" for="form3Example1cg">User UserName</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input   type="text" id="form3Example3cg" class="form-control form-control-lg" name="description"/>
-                                    <label class="form-label" for="form3Example3cg">Description</label>
+                                    <input   type="text" id="form3Example3cg" class="form-control form-control-lg" name="email"/>
+                                    <label class="form-label" for="form3Example3cg">Email</label>
                                 </div>
 
+                                <div class="form-outline mb-4">
+                                    <input type="password" id="form3Example4cg" class="form-control form-control-lg" name="password"/>
+                                    <label class="form-label" for="form3Example4cg">Password</label>
+                                </div>
 
-
-
+                                <div class="form-outline mb-4">
+                                    <select id="form3Example4cg" class="form-control form-control-lg" name="role">
+                                        <option value="ADMIN">ADMIN</option>
+                                        <option value="USER">USER</option>
+                                    </select>
+                                    <label class="form-label" for="form3Example4cg">Role</label>
+                                </div>
 
 
 
 
                                 <div class="d-flex justify-content-center">
                                     <button type="submit" name="add"
-                                            class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Transaction Yap</button>
+                                            class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">User Update</button>
                                 </div>
 
                                 <label class="form-label" for="form3Example4cdg">
@@ -68,4 +77,5 @@
 
 
 </body>
+</html>
 </html>
